--- a/Estrutura de Dados/ListaArvores/main.tex
+++ b/Estrutura de Dados/ListaArvores/main.tex
@@ -124,7 +124,7 @@ A seguir está o meu código para calcular o nível (altura) de um nó em uma á
 \lstinputlisting[language=c++]{code/alturaNo.cpp}
 
 \section{Nota}
-\paragraph{}Como este arquivo \LaTeX  \hspace{1mm}utiliza arquvios externos (para imagens e códigos-fonte), este trabalho está disponivel em um repositório pessoal do GitHub, junto com todos os outros trabalhos que eu utilizei \LaTeX.
+\paragraph{}Como este arquivo \LaTeX  \hspace{1mm}utiliza arquivos externos (para imagens e códigos-fonte), este trabalho está disponivel em um repositório pessoal do GitHub, junto com todos os outros trabalhos que eu utilizei \LaTeX.
 
 \begin{center}
     \href{https://github.com/gpgp2006/LaTeX}{GitHub - \LaTeX}
