melhorias simples de escrita no trabalho de BDII (Aula 04 - Exercícios)

--- a/3° Semestre/Banco de Dados/Aula 04 - Exercícios/main.tex
+++ b/3° Semestre/Banco de Dados/Aula 04 - Exercícios/main.tex
@@ -89,7 +89,7 @@ urlcolor=blue,
     ]{data.csv}
     \end{center}
 
-    \item 
+    \item A seguir estão as queries pedidas no exercício 3, letra B.
     \begin{enumerate}[label=\roman*., labelsep=0.5em, leftmargin=*]
         
         \item 
