Corrigido alguns erros no trabalho de Banco de Dados II (Aula 04 - Exercícios)

--- a/3° Semestre/Banco de Dados/Aula 04 - Exercícios/main.tex
+++ b/3° Semestre/Banco de Dados/Aula 04 - Exercícios/main.tex
@@ -303,7 +303,7 @@ urlcolor=blue,
 
 
 \section*{Considerações Finais}
-\paragraph{} O comando SQL do exercício 12 da questão 3 está com a grafia incorreta devido à um problema com o pacote \textit{listings} do \LaTeX{}, no qual não estava compilando quando a palavra "endereço" estava grafada corretamente, assim como no exercício 4, no qual não compila se a palavra "pontuação" esteja grafada e acentuada corretamente. Este e outros trabalhos feitos usando \LaTeX{} estão disponíveis em meu \href{https://github.com/gpgp2006/LaTeX}{GitHub}, junto com os arquivos utilizados.
+\paragraph{} A query do exercício 12 da questão 3 está com a grafia incorreta devido à um problema com o pacote \textit{listings} do \LaTeX{}, no qual não estava compilando quando a palavra "endereço" estava grafada corretamente, assim como no exercício 4, no qual não compila caso a palavra "pontuação" esteja grafada e acentuada corretamente. Este e outros trabalhos feitos usando \LaTeX{} estão disponíveis em meu \href{https://github.com/gpgp2006/LaTeX}{GitHub}, junto com os arquivos utilizados.
 
 
 
