corrigidos erros de gramática nos exercícios da Aula 07, de BD2.

--- a/3° Semestre/Banco de Dados/Aula 07 - Exercícios (Views SQL)/main.tex
+++ b/3° Semestre/Banco de Dados/Aula 07 - Exercícios (Views SQL)/main.tex
@@ -181,6 +181,6 @@ Para alterar a view 'insercao\_aluno', foi usada a seguinte query:
     \end{lstlisting}
 
 \section*{Considerações Finais}
-\paragraph{}Este e outros trabalhos que feitos por mim, usando \LaTeX{} estão disponíveis em meu \href{https://github.com/gpgp2006/LaTeX}{GitHub}, junto com os arquivos utilizados.
+\paragraph{}Este e outros trabalhos que foram feitos por mim, usando \LaTeX{} estão disponíveis em meu \href{https://github.com/gpgp2006/LaTeX}{GitHub}, junto com os arquivos utilizados.
 
 \end{document}
