analise numérica atualizado (FINALIZADO)

--- a/3° Semestre/Análise Numérica/Interpolação/main.tex
+++ b/3° Semestre/Análise Numérica/Interpolação/main.tex
@@ -115,7 +115,7 @@ A saída do programa está de acordo com as especificações do trabalho, com os
 \label{sec:resultados}
 \paragraph{} Usando a tabela abaixo como entrada, o número 5 representa a quantidade de pontos e o resto são os pontos em si. Com isso, o programa retorna a função abaixo da tabela.
 
-\begin{table}[ht!]
+\begin{table}[H]
 \centering
 \begin{tabular}{cc}
 \multicolumn{2}{c}{5} \\
@@ -135,7 +135,7 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\linewidth]{saida.png}
+    \includegraphics[width=0.5\linewidth]{resultado1.png}
     \caption{Gráfico da função com os pontos dados previamente}
     \label{fig:saida}
 \end{figure}
@@ -169,7 +169,7 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
         \subsubsection{Gráfico dos pontos dados e da função interpoladora}
             \begin{figure}[H]
                 \centering
-                \includegraphics[width=0.5\linewidth]{saida.png}
+                \includegraphics[width=0.5\linewidth]{exemplo1.png}
                 \caption{Placeholder}
                 \label{fig:placeholder}
             \end{figure}
@@ -200,7 +200,7 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
             \subsubsection{Gráfico dos pontos dados e da função interpoladora}
                 \begin{figure}[H]
                     \centering
-                    \includegraphics[width=0.5\linewidth]{saida.png}
+                    \includegraphics[width=0.5\linewidth]{exemplo2.png}
                     \caption{Placeholder 2}
                     \label{fig:placeholder2}
                 \end{figure}
@@ -238,7 +238,7 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
                 \subsubsection{Gráfico dos pontos dados e da função interpoladora}
                     \begin{figure}[H]
                         \centering
-                        \includegraphics[width=0.5\linewidth]{saida.png}
+                        \includegraphics[width=0.5\linewidth]{exemplo3.png}
                         \caption{Placeholder 2}
                         \label{fig:placeholder3}
                     \end{figure}
@@ -247,6 +247,6 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
 \section{Código-fonte do gerador de gráficos}
 \paragraph{} Abaixo está o código-fonte do programa usado para gerar os gráficos. Basicamente, ajustamos o \hyperref[sec:codigofonte1]{programa original} para automaticamente exportar um gráfico com os pontos de entrada e o gráfico da função interpoladora encontrada.
 
-\lstinputlisting[language=c++]{code/coisa.cpp}
+\lstinputlisting[language=c++]{code/geradorDeGrafico.cpp}
 
 \end{document}
