corrigido erros no trabalho de analise numerica

--- a/3° Semestre/Análise Numérica/Interpolação/main.tex
+++ b/3° Semestre/Análise Numérica/Interpolação/main.tex
@@ -170,7 +170,6 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
             \begin{figure}[H]
                 \centering
                 \includegraphics[width=0.5\linewidth]{exemplo1.png}
-                \caption{Placeholder}
                 \label{fig:placeholder}
             \end{figure}
 
@@ -201,14 +200,13 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
                 \begin{figure}[H]
                     \centering
                     \includegraphics[width=0.5\linewidth]{exemplo2.png}
-                    \caption{Placeholder 2}
                     \label{fig:placeholder2}
                 \end{figure}
 
         \subsection{Exemplo 3}
 
                 \subsubsection{Entrada do programa}
-                    \begin{table}[ht!]
+                    \begin{table}[H]
                         \centering
                         \begin{tabular}{cc}
                             \multicolumn{2}{c}{12} \\
@@ -239,7 +237,6 @@ A figura abaixo mostra o gráfico da função interpoladora, com os cinco pontos
                     \begin{figure}[H]
                         \centering
                         \includegraphics[width=0.5\linewidth]{exemplo3.png}
-                        \caption{Placeholder 2}
                         \label{fig:placeholder3}
                     \end{figure}
 
